--- a/react/ECMAScript/index.html
+++ b/react/ECMAScript/index.html
@@ -3,5 +3,10 @@
     <title>
         jstest
     </title>
-    <script src="/javascript-base/datatype.js"></script>
+   
+    <body>
+        <hr>
+        <div id="list"></div>
+    </body>
+    <script type="text/javascript" src="./javascript-base/document.js"></script>
 </html>
