--- a/react/ECMAScript/index.html
+++ b/react/ECMAScript/index.html
@@ -6,7 +6,12 @@
    
     <body>
         <hr>
-        <div id="list"></div>
+        <div>
+            <a href="./hpage/simple.html">请王思涵点开...</a>
+        </div>
+        <div id="list">
+        
+        </div>
     </body>
     <script type="text/javascript" src="./javascript-base/document.js"></script>
 </html>
