--- a/mky_project/webout/arap/salebill/salebill/main/index.html
+++ b/mky_project/webout/arap/salebill/salebill/main/index.html
@@ -29,5 +29,5 @@
   <script src="../../../../platform/ca/nccsign.js"></script>
   <script src="../../../../platform/ca/sha256.js"></script>
   <script src="../../../../platform/nc-lightapp-front/nc-lightapp-front.js"></script>
-  
-<script type="text/javascript" src="../../../../ct/ct/purdaily/main/index.3a519229.js"></script></body>
+  <script src="../../../../sscrp/rppub/components/image/index.js?v=1609906146010"></script>
+<script type="text/javascript" src="../../../../arap/salebill/salebill/main/index.dbe0ad87.js"></script></body>
